<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/station_check_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/station_check_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

        <TextView
                android:id="@+id/station_check_item_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="23"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

        <TextView
                android:id="@+id/station_check_item_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="Lorem ipsum"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/station_check_item_note">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <Button
                        android:id="@+id/button_okay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:backgroundTint="#4CAF50"
                        android:text="@string/station_check_button_okay"
                        tools:ignore="ButtonStyle" />

                <Button
                        android:id="@+id/button_problem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:backgroundTint="#F44336"
                        android:text="@string/station_check_button_not_okay"
                        app:layout_constraintStart_toEndOf="@+id/button_okay"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/problem_type_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <Button
                        android:id="@+id/button_tooLittle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/station_check_button_too_little"
                        tools:ignore="ButtonStyle" />

                <Button
                        android:id="@+id/button_broken"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/station_check_button_broken"
                        tools:ignore="ButtonStyle" />

                <Button
                        android:id="@+id/button_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/station_check_button_other"
                        tools:ignore="ButtonStyle" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
